@@ -8,11 +8,12 @@ version."""
 import time
 import queue
 
+from .log import log
 from .option import option_defns
 
 
 def error (msg):
-    print('worker:', msg)
+    log('worker:', msg)
 
 
 def timer_next_time (e, trigger, last):
@@ -56,7 +57,7 @@ def timer_times (options, timers):
             latest_t = subsequent_t - options[option_defns.min_cmd_separation]
             # move this timer earlier if the next one is too near
             if latest_t < t:
-                print('adjust event: {} ({:+.3f})'.format(e, latest_t - t))
+                log('adjust event: {} ({:+.3f})'.format(e, latest_t - t))
                 real_t = latest_t
 
         subsequent_t = real_t
@@ -76,7 +77,7 @@ def process_timers (options, timers):
 
     for real_t, (t, e, trigger) in timer_times(options, timers):
         if real_t <= now:
-            print('[{:.3f}] trigger event: {} ({:+.3f})'.format(now, e, -trigger.time))
+            log('trigger event: {} ({:+.3f})'.format(e, -trigger.time))
             e.trigger()
             new_t = timer_next_time(e, trigger, t - trigger.time)
             timers[trigger] = (new_t, e, trigger)
@@ -92,7 +93,7 @@ def run (events, options, cmd_queue):
         except queue.Empty:
             pass
         else:
-            print('received command:', repr(cmd))
+            log('received command:', repr(cmd))
             if cmd == 'quit':
                 break
             elif cmd == 'cancel':
